added html editor

--- a/app/features/Details/NewChannel/newchannel.view.html
+++ b/app/features/Details/NewChannel/newchannel.view.html
@@ -10,7 +10,7 @@
 
     <!------------- body content ---------->
 
-    <div class="row page_content margin-top-50px">
+    <div class="row page_content margin-top-50px margin-left-0">
         <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
             <div class="row no-padding">
                 <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
@@ -29,7 +29,7 @@
                             <uib-tab-heading class="padding-10px">
                                 <!--<span class="lsf icon-tab">photo</span> <label >IMPOSTAZIONI</label>-->
                                 <span class="font-normal font-bold span-tab">
-                                    <span class="lsf" style="font-size:25px">photo</span>
+                                    <span class="lsf font-w-100" style="font-size:25px">photo</span>
                                     <span class="tab-title">&nbsp;&nbsp;IMPOSTAZIONI</span>
                                 </span>
                             </uib-tab-heading>
@@ -108,7 +108,7 @@
                         <uib-tab index="1" id="tab1">
                             <uib-tab-heading class="padding-10px">
                                 <span class="font-normal font-bold span-tab">
-                                    <span class="lsf icon-tab-channel">map</span>
+                                    <span class="lsf font-w-100 icon-tab-channel">map</span>
                                     <span class="tab-title">&nbsp;&nbsp;CONTATTI</span>
                                 </span>
                             </uib-tab-heading>
@@ -169,7 +169,7 @@
                         <uib-tab index="2" id="tab2">
                             <uib-tab-heading class="padding-10px">
                                 <span class="font-normal font-bold span-tab">
-                                    <span class="lsf icon-tab-channel" style="font-size:30px;font-weight: 100;">time</span>
+                                    <span class="lsf font-w-100 icon-tab-channel" style="font-size:30px;font-weight: 100;">time</span>
                                     <span class="tab-title" >&nbsp;&nbsp;ORARI</span>
                                 </span>
                             </uib-tab-heading>
@@ -273,7 +273,7 @@
                         <uib-tab index="3" id="tab3">
                             <uib-tab-heading class="padding-10px">
                                 <span class="font-normal font-bold span-tab">
-                                    <span class="lsf" style="font-size:25px">lock</span>
+                                    <span class="lsf font-w-100" style="font-size:25px">lock</span>
                                     <span class="tab-title">&nbsp;&nbsp;ACCESSO</span>
                                 </span>
                             </uib-tab-heading>
