--- a/app/features/Home/home.view.html
+++ b/app/features/Home/home.view.html
@@ -25,7 +25,7 @@
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                     <div class="padding-left-20px">
-                        <button class="btn btn-new" ><i class="fa fa-plus"></i>&nbsp;&nbsp;&nbsp;NUOVO</button>
+                        <button class="btn btn-new" ui-sref="home.nuovo_contenuto"><i class="fa fa-plus"></i>&nbsp;&nbsp;&nbsp;NUOVO</button>
                     </div>
                 </div>
             </div>
