--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
         <script type="text/javascript" src="app/libs/angular-toastr/dist/angular-toastr.tpls.js"></script>
         <script type="text/javascript" src="app/libs/trix/dist/trix.js"></script>
         <script type="text/javascript" src="app/libs/angular-trix/dist/angular-trix.min.js"></script>
+        <script type="text/javascript" src="app/libs/angular-elastic/elastic.js"></script>
         <!-- APP -->
         <script type="text/javascript" src="app/config.js"></script>
         <script type="text/javascript" src="app/app.js"></script>
@@ -114,6 +115,7 @@
         <script type="text/javascript" src="app/features/Canali/canali.controller.js"></script>
         <script type="text/javascript" src="app/features/Iscritti/iscritti.controller.js"></script>
         <script type="text/javascript" src="app/features/Details/NewChannel/newchannel.controller.js"></script>
+        <script type="text/javascript" src="app/features/Details/NewArticle/newarticle.controller.js"></script>
 
 
         <!-- Bootstrap core JavaScript
