--- a/app/features/Details/NewArticle/newarticle.view.html
+++ b/app/features/Details/NewArticle/newarticle.view.html
@@ -2,9 +2,12 @@
 
     <!-- NAV BAR -->
     <div class="row">
-        <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
+        <div class="col-lg-9 col-sm-9 col-md-9 col-xs-6">
             <p class="font-bold font-medium color-mid-grey" style="margin-bottom:0">{{article.current_state.title | uppercase}}</p>
             <p class="font-bold font-medium" style="color: {{article.city.assets_color}}">{{article.city.ds_name | uppercase}} SMART</p>
+        </div>
+        <div class="col-lg-3 col-sm-3 col-md-3 col-xs-6">
+            <button ui-sref="home.contenuti" class="btn btn-info btn-block-settings pull-right no-margin"><span class="lsf color-grey">back</span>&nbsp;&nbsp;&nbsp;INDIETRO</button>
         </div>
     </div>
 
@@ -13,8 +16,39 @@
     <div class="row page_content margin-top-10px margin-left-0">
         <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
 
-            <div class="row no-padding">
-                <h1>SELECTS</h1>
+            <div class="row" style="margin-top:25px !important;">
+
+                <div class="col-lg-4 col-md-3 col-sm-6 col-xs-6 no-padding-left">
+                    <div class="form-group">
+                        <label class="font-small color-grey">CANALE</label>
+                        <ui-select class="community-ui-select" ng-model="article.options.channelSelected" on-select="article.clearAuthor()">
+                            <ui-select-match placeholder="Seleziona...">{{$select.selected.name()}}</ui-select-match>
+                            <ui-select-choices repeat="channel in article.options.channels | filter: $select.search track by $index">
+                                <span ng-bind="channel.name()"></span>
+                            </ui-select-choices>
+                        </ui-select>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 no-padding-left">
+                    <div class="form-group">
+                        <label class="font-small color-grey">AUTORE</label>
+                        <ui-select class="community-ui-select" ng-model="article.options.authorSelected">
+                            <ui-select-match placeholder="Seleziona...">{{$select.selected}}</ui-select-match>
+                            <ui-select-choices repeat="author in article.options.channelSelected.authorList() | filter: $select.search track by $index">
+                                <span ng-bind="author"></span>
+                            </ui-select-choices>
+                        </ui-select>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 no-padding-left">
+                    <div class="form-group border-line publish_date_filter">
+                        <label class="font-small color-grey" style="white-space:nowrap;padding-bottom: 5px;">CATEGORIA CONSIGLIATA</label>
+                        <md-datepicker md-open-on-focus ng-model="contenuti.dateSelected" md-placeholder="Seleziona la data..."  style="height: 42px;width: 230px;"></md-datepicker>
+                    </div>
+                </div>
+
+                <div class="col-lg-2 col-md-3 col-sm-6 col-xs-6"></div>
+
             </div>
 
 
@@ -216,16 +250,65 @@
                                         <cs-flag
                                                 class="my-flag-validation"
                                                 flag-show-info="false"
-                                                flag-selected="article.current.is_event"
+                                                flag-selected="article.options.event.isActive"
                                                 flag-string="INSERISCI NEGLI EVENTI"></cs-flag>
                                     </div>
                                     <div class="col-lg-6 col-sm-6 col-md-6 col-xs-6"></div>
                                 </div>
 
-                                <div class="row margin-top-20px">
-                                    <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
-
+                                <div ng-if="article.options.event.isActive" style="margin-top: 30px">
+                                    <div class="row">
+                                        <div class="col-lg-6 col-sm-6 col-md-6 col-xs-6">
+                                            <div class="border-bottom-grey">
+                                                <p class="font-small color-grey">LUOGO</p>
+                                                <input class="form-control new-channel-author table-day-text" placeholder="Indirizzo" ng-model="newchannel.new_channel.address" type="text">
+                                            </div>
+                                        </div>
                                     </div>
+
+                                    <!----------- NG REPEAT ----------->
+                                    <div class="row" ng-repeat="when in article.options.event.when">
+                                        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                                            <div class="row" style="margin-top: 25px">
+                                                <div class="col-lg-3 col-sm-3 col-md-3 col-xs-3">
+                                                    <div class="border-bottom-grey search-edition">
+                                                        <p class="font-small color-grey">DATA</p>
+                                                        <md-datepicker md-open-on-focus ng-model="when.date" md-placeholder="Seleziona la data..."  style="height: 42px;width: 230px;"></md-datepicker>
+                                                    </div>
+                                                </div>
+                                                <div class="col-lg-3 col-sm-3 col-md-3 col-xs-3">
+                                                    <div class="border-bottom-grey">
+                                                        <p class="font-small color-grey">ORA INIZIO</p>
+                                                        <ui-select class="community-ui-select table-day-text" ng-model="when.start">
+                                                            <ui-select-match placeholder="Seleziona...">{{$select.selected}}</ui-select-match>
+                                                            <ui-select-choices repeat="h in article.hours | filter: $select.search track by $index">
+                                                                <span ng-bind="h"></span>
+                                                            </ui-select-choices>
+                                                        </ui-select>
+                                                    </div>
+                                                </div>
+                                                <div class="col-lg-3 col-sm-3 col-md-3 col-xs-3">
+                                                    <div class="border-bottom-grey">
+                                                        <p class="font-small color-grey">ORA FINE</p>
+                                                        <ui-select class="community-ui-select table-day-text" ng-model="when.end">
+                                                            <ui-select-match placeholder="Seleziona...">{{$select.selected}}</ui-select-match>
+                                                            <ui-select-choices repeat="h in article.hours | filter: $select.search track by $index">
+                                                                <span ng-bind="h"></span>
+                                                            </ui-select-choices>
+                                                        </ui-select>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="row"  style="margin-top: 20px">
+                                        <div class="col-lg-6 col-sm-6 col-md-6 col-xs-6" ng-click="article.addDate()">
+                                            <button class="btn btn-info btn-add-author"><i class="fa fa-plus"></i></button>
+                                            <label class="font-small color-grey label-add-author">Aggiungi data</label>
+                                        </div>
+                                    </div>
+
                                 </div>
 
                                 <!-------- END --------->
