--- a/app/features/Details/NewChannel/newchannel.view.html
+++ b/app/features/Details/NewChannel/newchannel.view.html
@@ -76,7 +76,10 @@
                                         </div>
                                         <div class="row" style="margin-top: 10px">
                                             <div class="col-lg-6 col-sm-6 col-md-6 col-xs-6" ng-click="newchannel.addAuthor(newchannel.aToAdd)">
-                                                <button class="btn btn-info btn-add-author"><i class="fa fa-plus"></i></button>
+                                                <!--<button class="btn btn-info btn-add-author"><i class="fa fa-plus"></i></button>-->
+                                                <button class="no-border">
+                                                    <img src="app/assets/images/add_azure_button.png" width="35px" />
+                                                </button>
                                                 <label class="font-small color-grey label-add-author">Aggiungi Autore</label>
                                             </div>
                                         </div>
