--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
 
         <!-- COMPONENTS -->
         <script type="text/javascript" src="app/components/flag/flag.directive.js"></script>
+        <script type="text/javascript" src="app/components/mediamodal/mediamodal.component.js"></script>
 
         <!-- FEATURES -->
         <script type="text/javascript" src="app/features/main.controller.js"></script>
