--- a/index.html
+++ b/index.html
@@ -75,6 +75,8 @@
         <script type="text/javascript" src="app/libs/moment/moment.js"></script>
         <script type="text/javascript" src="app/libs/angular-toastr/dist/angular-toastr.tpls.js"></script>
         <script type="text/javascript" src="app/libs/angular-elastic/elastic.js"></script>
+        <script type="text/javascript" src="app/libs/ng-file-upload/ng-file-upload-all.min.js"></script> <!-- for no html5 browsers support -->
+        <script type="text/javascript" src="app/libs/ng-file-upload/ng-file-upload.js"></script>
 
         <script src="//cdn.quilljs.com/1.0.0/quill.min.js"></script>
         <script type="text/javascript" src="app/libs/ngQuill/src/ng-quill.js"></script>
