--- a/app/features/Details/NewArticle/newarticle.view.html
+++ b/app/features/Details/NewArticle/newarticle.view.html
@@ -86,8 +86,7 @@
                                             <div class="col-lg-6 col-sm-6 col-md-6 col-xs-6">
                                                 <p class="font-medium font-bold color-blue">PRINCIPALE</p>
                                                 <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12 div-icon">
-                                                    <!--<button class="btn btn-blue-icon margin-top-15px" ><span class="lsf font-medium">ok</span>&nbsp;&nbsp;&nbsp;SELEZIONA</button>-->
-                                                    <input class="btn btn-blue-icon margin-top-20px" type="file" file-change handler="article.fileSelect(files)">
+                                                    <button class="btn btn-blue-icon margin-top-15px" ><span class="lsf font-medium">ok</span>&nbsp;&nbsp;&nbsp;SELEZIONA</button>
                                                 </div>
                                             </div>
                                             <div class="col-lg-6 col-sm-6 col-md-6 col-xs-6">
