--- a/app/features/Home/home.view.html
+++ b/app/features/Home/home.view.html
@@ -81,6 +81,13 @@
                 </div>
             </div>
 
+            <div class="row height-30px">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                    <div class="padding-left-20px">
+                        <a class="menu_link font-medium color-grey pointer" ui-sref="{{home.ROUTING.segnalazioni.name}}">SEGNALAZIONI</a>
+                    </div>
+                </div>
+            </div>
 
         </div>
 
