Page dashboard and page segnalation

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <script type="text/javascript" src="app/features/Iscritti/iscritti.controller.js"></script>
         <script type="text/javascript" src="app/features/Details/NewChannel/newchannel.controller.js"></script>
         <script type="text/javascript" src="app/features/Details/NewArticle/newarticle.controller.js"></script>
-
+        <script type="text/javascript" src="app/features/Segnalazioni_2/segnalazioni.controller.js"></script>
 
         <!-- Bootstrap core JavaScript
         ================================================== -->
