--- a/app/features/Dashboard/dashboard.view.html
+++ b/app/features/Dashboard/dashboard.view.html
@@ -12,7 +12,120 @@
 
     <div class="row page_content">
         <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
-            <h1>DASHBOARD</h1>
+            <h3>Notifiche</h3>
+            <div class="row bgcolor-light-grey border-radius padding-10px">
+                <div class="col-lg-1 col-sm-1 col-md-1 col-xs-1 margin-top-10px">
+                    <img class="height-25px width-25px" src="app/assets/images/alert.jpg"/>
+                </div>
+                <div class="col-lg-10 col-sm-9 col-md-9 col-xs-9 margin-top-10px">
+                    <p class="font-medium">Su Corriere di Savigliano sono presenti <span>4</span> segnalazioni non verificate</p>
+                </div>
+                <div class="col-lg-1 col-sm-2 col-md-2 col-xs-2">
+                    <button class="btn btn-transparent no-padding margin-top-10px">VERIFICA</button>
+                </div>
+            </div>
+            <div class="row bgcolor-light-grey border-radius padding-10px margin-top-10px">
+                <div class="col-lg-1 col-sm-1 col-md-1 col-xs-1 margin-top-10px">
+                    <img class="height-25px width-25px" src="app/assets/images/report-unwatched.jpg"/>
+                </div>
+                <div class="col-lg-10 col-sm-9 col-md-9 col-xs-9 margin-top-10px">
+                    <p class="font-medium">Ci sono <span>3</span> nuove notizie inviate dagli utenti</p>
+                </div>
+                <div class="col-lg-1 col-sm-2 col-md-2 col-xs-2">
+                    <button class="btn btn-transparent no-padding margin-top-10px">VERIFICA</button>
+                </div>
+            </div>
+            <h3 class="margin-top-80px">Statistiche</h3>
+            <p class="color-mid-grey font-medium"><span>Savigliano Smart</span> è attivo dal <span>18 gennaio 2017</span> e conta <span>64 edizioni</span></p>
+            <div class="row margin-top-20px display-flex">
+                <div class="col-lg-5 col-sm-5 col-md-5 col-xs-5 border-grey border-radius no-padding">
+                    <div class="border-bottom-grey padding-left-15px padding-right-15px">
+                        <p class="color-blue font-xl font-normal margin-top-15px">Piattaforma</p>
+                        <p class="color-black font-bold font-xl margin-top-15px no-margin-bottom">1312</p>
+                        <p class="color-mid-grey font-small font-bold">UTENTI TOTALI</p>
+                        <p class="color-blue font-medium margin-top-15px">Attività</p>
+                    </div>
+                    <div>
+                        <div class="row padding-top-15 margin-left-15px margin-right-15px">
+                            <div class="col-lg-3 col-sm-3 col-md-3 col-xs-3">
+                                <p class="font-xl color-black no-margin-bottom">1760</p>
+                                <p class="color-mid-grey font-small font-bold">POST TOTALI</p>
+                            </div>
+                            <div class="col-lg-1 col-sm-1 col-md-1 col-xs-1"></div>
+                            <div class="col-lg-2 col-sm-2 col-md-2 col-xs-2">
+                                <p class="font-xl color-black no-margin-bottom">832</p>
+                                <p class="color-mid-grey font-small font-bold">ARTICOLI</p>
+                            </div>
+                            <div class="col-lg-2 col-sm-2 col-md-2 col-xs-2"></div>
+                            <div class="col-lg-2 col-sm-2 col-md-2 col-xs-2">
+                                <p class="font-xl color-black no-margin-bottom">136</p>
+                                <p class="color-mid-grey font-small font-bold">EVENTI</p>
+                            </div>
+                            <div class="col-lg-2 col-sm-2 col-md-2 col-xs-2"></div>
+                        </div>
+                        <div class="row"></div>
+                    </div>
+                </div>
+                <div class="col-lg-1 col-sm-1 col-md-1 col-xs-1"></div>
+                <div class="col-lg-5 col-sm-5 col-md-5 col-xs-5 border-grey border-radius no-padding">
+                    <div class="border-bottom-grey padding-left-15px padding-right-15px">
+                        <div class="row margin-top-15px">
+                            <div class="col-lg-3 col-sm-3 col-md-3 col-xs-3">
+                                <p class="color-blue font-xl font-normal">Canale</p>
+                            </div>
+                            <div class="col-lg-2 col-sm-2 col-md-2 col-xs-2"></div>
+                            <div class="col-lg-7 col-sm-7 col-md-7 col-xs-7">
+                                <ui-select class="community-ui-select font-normal" ng-model="newchannel.new_channel.category">
+                                    <ui-select-match placeholder="Seleziona...">{{$select.selected}}</ui-select-match>
+                                    <ui-select-choices repeat="cat in newchannel.categories | filter: $select.search track by $index">
+                                        <span ng-bind="cat"></span>
+                                    </ui-select-choices>
+                                </ui-select>
+                            </div>
+                        </div>
+                        <p class="color-black font-bold font-xl margin-top-10px no-margin-bottom">368</p>
+                        <p class="color-mid-grey font-small font-bold">ISCRITTI</p>
+                        <p class="color-blue font-medium margin-top-15px">Attività</p>
+                    </div>
+                    <div>
+                        <div class="row padding-top-15 margin-left-15px margin-right-15px">
+                            <div class="col-lg-3 col-sm-3 col-md-3 col-xs-3">
+                                <p class="font-xl color-black no-margin-bottom">1760</p>
+                                <p class="color-mid-grey font-small font-bold">POST</p>
+                            </div>
+                            <div class="col-lg-1 col-sm-1 col-md-1 col-xs-1"></div>
+                            <div class="col-lg-2 col-sm-2 col-md-2 col-xs-2">
+                                <p class="font-xl color-black no-margin-bottom">832</p>
+                                <p class="color-mid-grey font-small font-bold">ARTICOLI</p>
+                            </div>
+                            <div class="col-lg-2 col-sm-2 col-md-2 col-xs-2"></div>
+                            <div class="col-lg-2 col-sm-2 col-md-2 col-xs-2">
+                                <p class="font-xl color-black no-margin-bottom">136</p>
+                                <p class="color-mid-grey font-small font-bold">EVENTI</p>
+                            </div>
+                            <div class="col-lg-2 col-sm-2 col-md-2 col-xs-2"></div>
+                        </div>
+                        <div class="border-bottom-grey"><p class="color-blue font-medium margin-top-15px margin-left-15px">Interazioni</p></div>
+                        <div class="row padding-top-15 margin-left-15px margin-right-15px padding-bottom-30px">
+                            <div class="col-lg-3 col-sm-3 col-md-3 col-xs-3">
+                                <p class="font-xl color-black no-margin-bottom">432</p>
+                                <p class="color-mid-grey font-small font-bold">VISUALIZZAZIONI</p>
+                            </div>
+                            <div class="col-lg-1 col-sm-1 col-md-1 col-xs-1"></div>
+                            <div class="col-lg-2 col-sm-2 col-md-2 col-xs-2">
+                                <p class="font-xl color-black no-margin-bottom">848</p>
+                                <p class="color-mid-grey font-small font-bold">MI&nbsp;PIACE</p>
+                            </div>
+                            <div class="col-lg-2 col-sm-2 col-md-2 col-xs-2"></div>
+                            <div class="col-lg-2 col-sm-2 col-md-2 col-xs-2">
+                                <p class="font-xl color-black no-margin-bottom">246</p>
+                                <p class="color-mid-grey font-small font-bold">COMMENTI</p>
+                            </div>
+                            <div class="col-lg-2 col-sm-2 col-md-2 col-xs-2"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
