added check for modal

--- a/app/features/Login/login.view.html
+++ b/app/features/Login/login.view.html
@@ -48,7 +48,7 @@
                             <a class="community_link">RECUPERA PASSWORD</a>
                         </div>
                         <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-                            <button ng-click="loginCtr.login()" class="btn btn-green pull-right" ladda="loginCtr.userdata.isWorking()">ACCEDI</button>
+                            <button ng-click="loginCtr.login()" class="btn btn-green pull-right" ladda="loginCtr.userdata.isWorking()" data-spinner-color="#FFFFFF">ACCEDI</button>
                         </div>
                     </div>
                 </div>
