--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
         <script type="text/javascript" src="app/models/article.model.js"></script>
         <script type="text/javascript" src="app/models/channel.model.js"></script>
         <script type="text/javascript" src="app/models/edizioni.model.js"></script>
+        <script type="text/javascript" src="app/models/media.model.js"></script>
 
         <!-- SERVICES -->
         <script type="text/javascript" src="app/services/bus.service.js"></script>
@@ -99,6 +100,7 @@
         <script type="text/javascript" src="app/services/channels.service.js"></script>
         <script type="text/javascript" src="app/services/category.service.js"></script>
         <script type="text/javascript" src="app/services/edizioni.service.js"></script>
+        <script type="text/javascript" src="app/services/media.service.js"></script>
 
         <!-------- UTILS -------->
         <script type="text/javascript" src="app/utils/util.service.js"></script>
