--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
         <script type="text/javascript" src="app/features/Details/NewChannel/newchannel.controller.js"></script>
         <script type="text/javascript" src="app/features/Details/NewArticle/newarticle.controller.js"></script>
         <script type="text/javascript" src="app/features/Segnalazioni_2/segnalazioni.controller.js"></script>
+        <script type="text/javascript" src="app/features/Commenti/commenti.controller.js"></script>
 
         <!-- Bootstrap core JavaScript
         ================================================== -->
