--- a/app/features/Details/NewArticle/Commenti/commenti.view.html
+++ b/app/features/Details/NewArticle/Commenti/commenti.view.html
@@ -2,9 +2,12 @@
 
     <!-- NAV BAR -->
     <div class="row">
-        <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
+        <div class="col-lg-9 col-sm-9 col-md-9 col-xs-6">
             <p class="font-bold font-medium color-mid-grey" style="margin-bottom:0">{{commenti.current_state.title | uppercase}}</p>
             <p class="font-bold font-medium" style="color: {{commenti.city.assets_color}}">{{commenti.city.ds_name | uppercase}} SMART</p>
+        </div>
+        <div class="col-lg-3 col-sm-3 col-md-3 col-xs-6">
+            <button ui-sref="home.modifica_contenuto({id:1})" class="btn btn-block-settings pull-right no-margin"><span class="lsf color-grey">back</span>&nbsp;&nbsp;&nbsp;INDIETRO</button>
         </div>
     </div>
 
