--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
         <script type="text/javascript" src="app/libs/angular-elastic/elastic.js"></script>
         <script type="text/javascript" src="app/libs/ng-file-upload/ng-file-upload-all.min.js"></script> <!-- for no html5 browsers support -->
         <script type="text/javascript" src="app/libs/ng-file-upload/ng-file-upload.js"></script>
+        <script type="text/javascript" src="app/libs/ng-directive-lazy-image/dist/lazy-image.min.js"></script>
 
         <script src="//cdn.quilljs.com/1.0.0/quill.min.js"></script>
         <script type="text/javascript" src="app/libs/ngQuill/src/ng-quill.js"></script>
