--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <script type="text/javascript" src="app/libs/ladda/dist/ladda.min.js"></script>
         <script type="text/javascript" src="app/libs/angular-ladda/dist/angular-ladda.min.js"></script>
         <script type="text/javascript" src="app/libs/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
-        <script type="text/javascript" src="app/libs/angular-vimeo-embed/dist/angular-vimeo-embed.min.js"></script>
+        <script type="text/javascript" src="app/libs/angular-vimeo-embed/src/angular-vimeo-embed.js"></script>
         <script type="text/javascript" src="app/libs/vimeo-upload/vimeo-upload.js"></script>
         <script type="text/javascript" src="app/libs/angular-aria/angular-aria.js"></script>
         <script type="text/javascript" src="app/libs/angular-animate/angular-animate.min.js"></script>
