--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
         <script type="text/javascript" src="app/libs/ng-file-upload/ng-file-upload-all.min.js"></script> <!-- for no html5 browsers support -->
         <script type="text/javascript" src="app/libs/ng-file-upload/ng-file-upload.js"></script>
         <script type="text/javascript" src="app/libs/ng-directive-lazy-image/dist/lazy-image.min.js"></script>
+        <script type="text/javascript" src="app/libs/ng-videosharing-embed/build/ng-videosharing-embed.min.js"></script>
 
         <script src="//cdn.quilljs.com/1.0.0/quill.min.js"></script>
         <script type="text/javascript" src="app/libs/ngQuill/src/ng-quill.js"></script>
